# cpp-classroom-1920

semester_01/cls_01/src/task_1/: hello.cpp
semester_01/cls_01/src/task_2/: fizzbuzz.cpp
semester_01/cls_01/src/task_3/: compute_fib.cpp
semester_01/cls_02/src/task_1/: main.cpp  math.cpp
semester_01/cls_02/src/task_2/: a.cpp  a.hpp  main.cpp
semester_01/cls_02/src/task_3/: a.cpp  main.cpp
semester_01/cls_02/src/task_4/: main.cpp
semester_01/cls_03/src/task_1/: source.cpp  source.hpp  test.cpp
semester_01/cls_03/src/task_2/: ladder_combinations.cpp
semester_01/cls_03/src/task_3/: concat.cpp  test.cpp
semester_01/cls_03/src/task_4/: matrices.cpp  matrices.hpp
semester_01/cls_04/src/task_1/: helper_bot.cpp
semester_01/cls_05/src/task_1/: for_each.cpp  for_each.hpp
semester_01/cls_05/src/task_2/: read_write.cpp  read_write.hpp
semester_01/cls_05/src/task_3/: combine.cpp  combine.hpp
semester_01/cls_06/src/task_1/: shared_buffer.cpp  (+1 more)
semester_02/cls_04/: README.adoc
semester_02/cls_05/: CMakeLists.txt  README.adoc
semester_02/cls_05/src/task_1/: test.cpp
semester_02/cls_05/src/task_2_3_4/: test_2.cpp  test_3.cpp  test_4.cpp
semester_02/cls_07/: CMakeLists.txt  README.adoc
semester_02/cls_08/: CMakeLists.txt  README.adoc
semester_02/cls_09/: README.adoc
semester_02/control_01/: README.adoc
semester_02/control_02/: CMakeLists.txt  README.adoc
semester_02/control_02/src/: smoke.cpp
semester_02/control_03/: CMakeLists.txt  README.adoc
semester_02/control_04/: CMakeLists.txt  README.adoc
semester_02/control_04/src/: smoke.cpp
(+17 files in other folders)
